--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -392,6 +392,8 @@
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 
+
+<script src="controller/DashboardController.js"></script>
 <script src="controller/DashboardController.js"></script>
 <script src="controller/CustomerController.js"></script>
 <script src="controller/ItemController.js"></script>
