--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -13,6 +13,8 @@
             cursor: pointer;
         }
     </style>
+
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
 </head>
 
 <body>
@@ -387,6 +389,12 @@
             </div>
         </div>
     </main>
+
+<script src="assets/js/bootstrap.js"></script>
+<script src="assets/code.jquery.com_jquery-3.7.1.min.js"></script>
+<script src="controller/app.js"></script>
+<script src="controller/DashboardController.js"></script>
+
 
 
 
