--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -394,6 +394,8 @@
 <script src="assets/code.jquery.com_jquery-3.7.1.min.js"></script>
 <script src="controller/app.js"></script>
 <script src="controller/DashboardController.js"></script>
+<!--<script src="controller/CustomerController.js"></script>-->
+
 
 
 
