--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -397,6 +397,8 @@
 <script src="controller/CustomerController.js"></script>
 <script src="controller/DashboardController.js"></script>
 <script src="controller/ItemController.js"></script>
+<script src="controller/placeOrderController.js"></script>
+
 
 
 
