--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -411,7 +411,7 @@
                         <th>Total</th>
                     </tr>
                     </thead>
-                    <tbody class="bg-light text-dark" id="orderTable">
+                    <tbody class="bg-light text-dark" id="orderDetailTable">
 
                     </tbody>
                 </table>
