--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -396,6 +396,8 @@
 <!--Order Detail Content-->
 <main class="container-fluid" id="orderDetailContent">
     <div class="container-fluid mt-4">
+        <h1>Order Details</h1>
+
         <!--main tile-->
         <div class="jumbotron pt-4">
             <!--order Detail table-->
@@ -403,12 +405,10 @@
                 <table class="table table-bordered text-white">
                     <thead class="bg-primary">
                     <tr>
-                        <th>Item Code</th>
-                        <th>Item Name</th>
-                        <th>Price</th>
-                        <th>Available Qty</th>
-                        <th>Buying Amount</th>
+                        <th>Order ID</th>
+                        <th>Customer Id</th>
                         <th>Total</th>
+                        <th>Date</th>
                     </tr>
                     </thead>
                     <tbody class="bg-light text-dark" id="orderDetailTable">
