--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -430,6 +430,9 @@
 <script src="controller/ItemController.js"></script>
 <script src="controller/placeOrderController.js"></script>
 
+<script src="controller/validation/CustomerValidation.js"></script>
+
+
 
 
 
