--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -408,12 +408,13 @@
                         <th>Order ID</th>
                         <th>Customer Id</th>
                         <th>Total</th>
+                        <th>QTY</th>
                         <th>Date</th>
                     </tr>
                     </thead>
                     <tbody class="bg-light text-dark" id="orderDetailTable">
 
-                    </tbody>
+                    </tbody >
                 </table>
             </div>
             <!---------->
@@ -429,6 +430,8 @@
 <script src="controller/DashboardController.js"></script>
 <script src="controller/ItemController.js"></script>
 <script src="controller/placeOrderController.js"></script>
+<script src="controller/OrderDetailController.js"></script>
+
 
 <script src="controller/validation/CustomerValidation.js"></script>
 
