--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -432,6 +432,8 @@
 <script src="controller/placeOrderController.js"></script>
 <script src="controller/OrderDetailController.js"></script>
 
+<script src="db/db.js"></script>
+
 
 <script src="controller/validation/CustomerValidation.js"></script>
 
