--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -436,6 +436,8 @@
 
 
 <script src="controller/validation/CustomerValidation.js"></script>
+<script src="controller/validation/ItemValidation.js"></script>
+
 
 
 
