--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -437,6 +437,8 @@
 
 <script src="controller/validation/CustomerValidation.js"></script>
 <script src="controller/validation/ItemValidation.js"></script>
+<script src="controller/validation/OrderValidation.js"></script>
+
 
 
 
