--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -15,6 +15,7 @@
     </style>
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <script src="controller/validation/OrderValidation.js"></script>
 </head>
 
 <body>
