--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -437,7 +437,7 @@
 <script src="controller/placeOrderController.js"></script>
 <script src="controller/OrderDetailController.js"></script>
 
-<script src="db/db.js"></script>
+<script src="util/db.js"></script>
 
 
 <script src="controller/validation/CustomerValidation.js"></script>
