--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -15,7 +15,7 @@
     </style>
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <script src="controller/validation/OrderValidation.js"></script>
+
 </head>
 
 <body>
@@ -442,7 +442,9 @@
 
 <script src="controller/validation/CustomerValidation.js"></script>
 <script src="controller/validation/ItemValidation.js"></script>
-<script src="controller/validation/OrderValidation.js"></script>
+<!--<script src="controller/validation/OrderValidation.js"></script>-->
+<!--<script src="controller/validation/OrderValidation.js"></script>-->
+<script src="util/Alert.js"></script>
 
 
 
