--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -311,10 +311,23 @@
                                         </div>
                                     </div>
                                     <div class="form-group text-right">
-                                        <button class="btn btn-danger col-12 col-sm-auto" id="btnAddToTable" type="button">
+                                        <button class="btn btn-primary col-12 col-sm-auto" id="btnAddToTable" type="button">
                                             Add Item
                                         </button>
+                                        <button class="btn btn-danger col-12 col-sm-auto" id="btnClear" type="button">
+                                            Clear All
+                                        </button>
                                     </div>
+
+
+<!--                                    <div class="row d-flex justify-content-end">-->
+<!--                                        <div class="col-3">-->
+<!--                                            <button id="btnClear" type="button" class="btn btn-danger col-12 ">Clear All</button>-->
+<!--                                        </div>-->
+<!--                                        <div class="col-2">-->
+<!--                                            <button id="btnAddOrder" type="button" class="btn btn-primary col-12 ">Add</button>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
                                 </form>
                             </div>
                         </div>
